auth and JWT is finally working

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-server='localhost:6970'
+REACT_APP_AUTH0_DOMAIN=dev-7fzxcbarf08zoaab.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=e1Lr5fXH5T4VrRoCEvg1CBHwRdSj0Qcs
+REACT_APP_AUTH0_AUDIENCE=https://fgq.server
+REACT_APP_SERVER_URL=http://localhost:6969
