--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ REACT_APP_AUTH0_DOMAIN=dev-7fzxcbarf08zoaab.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=e1Lr5fXH5T4VrRoCEvg1CBHwRdSj0Qcs
 REACT_APP_AUTH0_AUDIENCE=https://fgq.server
 REACT_APP_SERVER_URL=http://localhost:6969
+REACT_APP_URL=http://localhost:3000/dashboard
